--- a/index.html
+++ b/index.html
@@ -28,30 +28,163 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="paradigms" class="anchor" href="#paradigms" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Paradigms</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This repository collects code for various experimental paradigms.</p>
+
+<p>Currently, I am building only in PsychoPy, but in the future I will likely include Psychtoolbox.</p>
+
+<p>Each task is self-contained into its own directory along with necessary resource files. To run a paradigm, simply load it into the "Coder View" in PsychoPy, then click the "Run" button.</p>
+
+<p>If you need to adjust screen resolution settings, you can do so in the paradigm's main file (at the topmost section of the code).</p>
+
+<h2>
+<a id="contents" class="anchor" href="#contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contents</h2>
+
+<ul>
+<li><a href="#opspan">OPSPAN</a></li>
+<li><a href="#two-step">Two-Step Task</a></li>
+</ul>
+
+<h2>
+<a id="current-paradigms" class="anchor" href="#current-paradigms" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Paradigms</h2>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="-operation-span-opspan" class="anchor" href="#-operation-span-opspan" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a name="opspan"></a> Operation Span (OPSPAN)</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This is a working memory task as described in:</p>
+
+<ul>
+<li>Unsworth, N. et al. (2005) An automated version of the operation span task. Behav. Res. Methods 37, 498–505</li>
+</ul>
+
+<p>Credit is owed to <a href="https://github.com/tmalsburg">Titus von der Malsburg</a> for the equations and consonants file, which I took from his OPSPAN implementation <a href="https://github.com/tmalsburg/py-span-task"><code>py-span-task</code></a>. Titus' package is great, and includes an R script to calculate performance.</p>
+
+<p>The PsychoPy implementation I have included attempts to retain as much fidelity as possible to the implementation in Unsworth et al. (2005). Some notable exceptions include:</p>
+
+<ul>
+<li>Equations were all presented on one line, as in Titus von der Malsburg's version</li>
+<li>Subjects type in the letters they had to memorize, rather than selecting from those placed on a grid</li>
+<li>There is no feedback for number of equations correctly solved. The authors of that paper provided a visual indicator of percentage complete. I omitted this to minimize the number of elements displayed on the screen.</li>
+</ul>
+
+<h4>
+<a id="output" class="anchor" href="#output" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Output</h4>
+
+<p>The OPSPAN output will be a <code>.csv</code> file including the subject ID, which is collected at the outset through a GUI. The column headings are as follows:</p>
+
+<table>
+<thead>
+<tr>
+<th>Column Head</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>subject_id</code></td>
+<td>The subject's unique id</td>
+</tr>
+<tr>
+<td><code>iteration</code></td>
+<td>Each span length is presented for (<em>n</em> iterations). Default is 3 iterations for 5 spans (3-7 characters).</td>
+</tr>
+<tr>
+<td><code>span</code></td>
+<td>The number of characters in the current trial. As per Unsworth et al. (2005), the default is 3 to 7</td>
+</tr>
+<tr>
+<td><code>correct</code></td>
+<td>Binary. Whether the characters were correctly recalled at the end of a trial.</td>
+</tr>
+<tr>
+<td><code>math_accuracy</code></td>
+<td>The percentage of correct answers to equation portions</td>
+</tr>
+<tr>
+<td><code>n_math_timeout</code></td>
+<td>Number of equations in which there was a timeout. For the absolute scoring system in Unsworth et al. (2005), if the user times out on an equation during a span trial, the trials should not be counted as correct.</td>
+</tr>
+<tr>
+<td><code>mathrt_mean</code></td>
+<td>Mean reaction time for math problems</td>
+</tr>
+<tr>
+<td><code>mathrt_sd</code></td>
+<td>Standard deviation of reaction time for math problems</td>
+</tr>
+<tr>
+<td><code>mathrt_max</code></td>
+<td>Maximum reaction time during math problems for that given span trial.</td>
+</tr>
+</tbody>
+</table>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="-two-step-task" class="anchor" href="#-two-step-task" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a name="two-step"></a> Two-Step task</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>This is an implementation of the two-step task from the following paper:</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<ul>
+<li>Daw, N.D. et al. (2011) Model-based influences on humans’ choices and striatal prediction errors. Neuron 69, 1204–1215</li>
+</ul>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>My implementation does not yet have a training phase, which I am working on adding at the moment.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>The default parameters for the task can be set at the top of the twostep.py file.</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h4>
+<a id="output-1" class="anchor" href="#output-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Output</h4>
+
+<p>This task produces a <code>.csv</code> file with the following column headings</p>
+
+<table>
+<thead>
+<tr>
+<th>Column Head</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>'subject_id'</td>
+<td>Subject ID, collected from initial GUI</td>
+</tr>
+<tr>
+<td>'step2state'</td>
+<td>The second step state. (First step states are always the same, so they are not listed)</td>
+</tr>
+<tr>
+<td>'choice1'</td>
+<td>First step choice</td>
+</tr>
+<tr>
+<td>'choice2'</td>
+<td>Second step choice</td>
+</tr>
+<tr>
+<td>'reward'</td>
+<td>Reward received at trial</td>
+</tr>
+<tr>
+<td>'rt_step1'</td>
+<td>Step 1 choice reaction time</td>
+</tr>
+<tr>
+<td>'rt_step2'</td>
+<td>Step 2 choice reaction time</td>
+</tr>
+<tr>
+<td>'key_step1'</td>
+<td>Key pressed at step 1 choice. Since the stimuli are randomly alternated between the left and right sides, these keys are recorded in order to determine whether subjects are not pressing the same key for most trials.</td>
+</tr>
+<tr>
+<td>'key_step2'</td>
+<td>Key pressed at step 2 choice</td>
+</tr>
+</tbody>
+</table>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/abrahamnunes">abrahamnunes</a></p>
